# neuroProject

./: CMakeLists.txt  README.md  constant.hpp  main.cpp  network.cpp  network.hpp  neuron.cpp  neuron.hpp  test1.cpp  test2.cpp  unittest.cpp
